# DataAugmentationPipeline

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  setup.py
components/: AudioConversation.py  AudioEffects.py  AudioTools.py  DataGen.py  Dataloaders.py  MusicHandler.py  Segments2Image.py
notebooks/: dataloaderTest.ipynb  loadownData.ipynb
output_data/: shard_00000.tar  shard_00001.tar
output_segments/: segments.json
samples/: segments.json  segments_gapped.json
samples/output/: segments.json
samples/output2/: segments.json
samples/output3/: segments.json
samples/output_good_sample/: segments.json
samples/output_old/: segments.json
scripts/: applyAudioEnhancements.py  applyBackgroundMusic.py  applySoundEffects.py  createAudio.py  createAudioUsingLib.py  createDataSet.py  dictionary.json  generateConversation.py  importTest.py  segments.json  segments_gapped.json  untarFiles.py  updateDict.py
